# SE_IMR_MTL_KD

./: .gitignore  pyproject.toml
.github/instructions/: prompt.instructions.md
configs/: default.yaml  infer.yaml  train.yaml
scripts/: Partitions.txt  Speaker_ids.txt  analyze_emotions.py  check_dataset_split.py  check_emotion_distribution.py  check_speaker_gender.py  clean_labels.py  extract_hubert.py  extract_wav2vec2.py  labels_extraction.py  organize_msp_podcast.py  recover_missing_files.py  visualize_tsne.py
src/: README.md  eval.py  infer.py  train.py
src/data/: dataset.py
src/losses/: multitask_losses.py  regression_losses.py
src/metrics/: regression_metrics.py
src/models/: mtl_GRU_model.py
src/utils/: checkpoint.py  logger.py  visualization.py
